# platelet-analysis

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: test-and-deploy.yml
examples/: C2aCtrl_df.py  PCA.py  animations.py  cluster_all.py  clustering_attempts.py  convert_tracks.py  data_func_magic.py  debug_local_vars.py  investigate.py  neighbours.py  paraview.py  platelet-wise.py  plot.py  save_as_parquet.py  spherical_coords.py  view_track_properties.py  vis_tracks.py
examples/MIPS-paper/: MIPS_figure_2.ai  calicum_bar.py  deep-learning_accuracy.py  figure_2_plots.py  figure_2_plots_new_env.py  get_IsoA_quad_data.py  get_exp_IsoA_quad_data.py  get_insideout_phase_data.py  get_regions_epochs_data.py  get_regions_phase_data.py  growth_phase_data.py  insideout_plots.py  new_MIPS_df.py  new_data.py  parallel_coordinates.py  regions_data.py  regions_heatmap.py  regions_isoA_heatmap.py  regions_lineplots.py  shedding_vs_non.py
examples/Niklas/: example.py  local-density.ipynb
examples/Pia/: counts_export.py  export_for_paraview.py  mips_exploration.py  mips_surface.py  mips_surface_plots.py  vis_tracks_mips.py
examples/TDA/: TDA_function_workshop.py  all_of_the_donut_data.py  debugging_topology.py  donut-plots.py  donut_correlates.py  donut_plots.py  loop_simulations.py  ripser_2d.py  smoothed_donuts.py
examples/calcium-playground/: finding_waves.py
examples/clustering/: PCA.py  cluster_170-up.py  cluster_all.py  cluster_platelets_0.py  clustering_attempts.py
examples/dataframe-gen/: C2aKD_df.py
examples/menu/: test_menu.py
examples/misc/: merge_nb_cont_15.py
examples/plateletwise/: platelet-wise.py
examples/plots/: barplots.py  experimental_comp.py  lineplots.py  measures_lineplots.py  measures_violin_and_kde.py  movement_lineplots.py  raincloud.py
examples/stats/: correlation.py  regression.py
examples/toroidal_paper/: clean_dataframes.py  (+15 more)
ipynb/: 1(3)_Load data&analysis.ipynb  2(3)_Assemble_Dataframe_inhlist2.ipynb  5_paraview-8.ipynb  TestPL.ipynb
massive/: M3_cluster_SC-emb.sh  M3_cluster_SCnV.py  M3_cluster_SCnV_50-99.py  M3_cluster_SCnV_bypath.py  M3_cluster_SVDP-0.py  M3_cluster_SVDP-0.sh  M3_cluster_platelets_1.py  M3_cluster_platelets_1.sh  M3_plot_clusters.py  add_vars.py  env.yml  slurm-26429140.out  slurm-26429705.out  slurm-26432079.out  slurm-26432238.out  slurm-26432746.out  slurm-26433546.out
old_modules/: clustering.py  config.py  data_func_magic.py  high_level_func_magic.py  io.py  plateletwise.py  position.py  stats.py  timebinned.py
(+299 files in other folders)
