[metadata]
name = plateletanalysis
version = 0.0.1
author = Abigail S McGovern & Niklas Borknas
author_email = Abigail.McGovern1@monash.edu
url = https://github.com/abigailmcgovern/platelet-analysis
license = BSD-3-Clause
description = plateletanalysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Researchers
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/abigailmcgovern/platelet-analysis/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
# add your package requirements here
install_requires = 
	numpy
	pandas
	matplotlib
	scipy
	ptitprince
	scikit-learn
	pyarrow
	fastparquet
	napari
	scikit-image
include_package_data = True

[options.packages.find]
where = src

