[metadata]
name = plateletanalysis
version = 0.0.3
author = Abigail S McGovern & Niklas Borknas
author_email = Abigail.McGovern1@monash.edu
url = https://github.com/abigailmcgovern/platelet-analysis
license = BSD-3-Clause
description = plateletanalysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Science/Research
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/abigailmcgovern/platelet-analysis/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
# add your package requirements here
install_requires = 
	numpy>=1.26.1
	pandas>=2.1.2
	matplotlib>=3.8.1
	scipy>=1.11.3 
	scikit-learn>=1.3.2
	pyarrow>=14.0.1
	fastparquet>=2023.10.1
	napari>=0.4.18
	scikit-image>=0.22.0
	magicgui>=0.8.0 
	umap-learn>=0.5.4
	dask>=2023.10.1
	distributed>=2023.10.1
	seaborn>=0.11.0
	zarr>=2.16.1
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
donut = 
	ripser>=0.6.4

